fixed page layout spacing/positioning (header/main/footer)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,11 @@ body {
   background: white url(/images/bg.jpg) repeat;
 }
 
+#body_container {
+    min-height: 100%;
+    position: relative;
+}
+
 h2 {
     clear: both;
 }
@@ -115,7 +120,12 @@ header {
             background-color: rgba(87, 77, 79, 1.0);
             background-color: #574d4f;
         }
-        
+
+
+#footer_spacer {
+    height: 125px;
+}
+
 footer {
     margin-left: 0;
     padding: 15px 0;
@@ -124,6 +134,10 @@ footer {
     background: #574d4f;
     color: white;
     clear: both;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 90px;
 }
 
     footer > div {
@@ -150,7 +164,8 @@ footer {
     }
     
     footer #copyrights {
-        margin: 10px auto;        
+        margin: 10px auto;
+        margin-bottom: 0;
         width: 365px;
         font-size: 0.8em;
         color: #969091;
@@ -173,7 +188,7 @@ footer {
 
 #main {
     padding: 10px 25px;
-    min-height: 75%;
+    /*min-height: 75%;*/
 }
 
     #main.index {
@@ -328,7 +343,7 @@ div.transfer_link{
 	display: none;
 }
 
-/*Make desktop version link visible for mobile only, must be the same as media_selector in layout.jade.*/
+/*Make desktop version link visible for mobile only, must be the same as media_selector in top.ejs.*/
 @media only screen and (max-device-width: 720px) {
 	/*When mobile is in mobile mode to desktop is displayed otherwise to mobile is displayed*/
 	div.transfer_link{
